--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,43 @@
 
-# Created by https://www.gitignore.io/api/vim,macos
-# Edit at https://www.gitignore.io/?templates=vim,macos
+# Created by https://www.toptal.com/developers/gitignore/api/vim,macos,kicad
+# Edit at https://www.toptal.com/developers/gitignore?templates=vim,macos,kicad
+
+### KiCad ###
+# For PCBs designed using KiCad: http://www.kicad-pcb.org/
+# Format documentation: http://kicad-pcb.org/help/file-formats/
+
+# Temporary files
+*.000
+*.bak
+*.bck
+*.kicad_pcb-bak
+*.sch-bak
+*~
+_autosave-*
+*.tmp
+*-save.pro
+*-save.kicad_pcb
+fp-info-cache
+
+# Netlist files (exported from Eeschema)
+*.net
+
+# Autorouter files (exported from Pcbnew)
+*.dsn
+*.ses
+
+# Exported BOM files
+*.xml
+*.csv
+
+### KiCad Patch ###
+rescue-backup/
+
+*.tsv
+bom/
+
+# Gerber export output
+out/
 
 ### macOS ###
 # General
@@ -33,6 +70,7 @@ Temporary Items
 ### Vim ###
 # Swap
 [._]*.s[a-v][a-z]
+!*.svg  # comment out if you don't need vector files
 [._]*.sw[a-p]
 [._]s[a-rt-v][a-z]
 [._]ss[a-gi-z]
@@ -44,16 +82,11 @@ Sessionx.vim
 
 # Temporary
 .netrwhist
-*~
-
 # Auto-generated tag files
 tags
-
 # Persistent undo
 [._]*.un~
 
-# Coc configuration directory
-.vim
+# End of https://www.toptal.com/developers/gitignore/api/vim,macos,kicad
 
-# End of https://www.gitignore.io/api/vim,macos
-
+my-keyboard-backups
